fixed a few more spacing issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,11 @@ h1 {
   text-transform: capitalize;
   padding-left: 12px;
 }
-#city,
+#city {
+  font-size: 35px;
+  font-weight: bold;
+  padding-top: 10px;
+}
 #date {
   font-size: 35px;
   font-weight: bold;
@@ -107,7 +111,7 @@ h1 {
 #temps {
   font-size: 17px;
   line-height: 2;
-  padding-left: 20px;
+  padding-left: 0px;
 }
 #goldHour {
   text-align: center;
